--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "style-loader": "^0.8.3"
   },
   "name": "webpack-palette-react-hot-boilerplate",
-  "description": "<br> <p align=\"center\">A basic webpack template for react projects, with the amazing <a href=\"https://github.com/gaearon/react-hot-loader/react-hot-loader\">react-hot-loader</a></p>",
+  "description": "A basic webpack template with react-hot-loader",
   "version": "1.0.0",
   "main": "server.js",
   "repository": {
