--- a/package.json
+++ b/package.json
@@ -1,11 +1,34 @@
 {
   "name": "webpack-palette-react-hot",
-  "description": "A basic webpack template with react-hot-loader",
-  "version": "1.0.1",
+  "version": "1.0.2",
+  "description": "A basic webpack template with react-hot loader",
   "main": "server.js",
+  "dependencies": {
+    "babel-core": "^5.1.13",
+    "babel-loader": "^5.0.0",
+    "css-loader": "^0.12.0",
+    "file-loader": "^0.8.1",
+    "html-loader": "^0.2.3",
+    "json-loader": "^0.5.1",
+    "markdown-loader": "^0.1.2",
+    "node-sass": "^2.1.1",
+    "object-assign": "^2.0.0",
+    "react": "^0.13.2",
+    "react-hot-loader": "^1.2.5",
+    "react-router": "^0.13.2",
+    "sass-loader": "^0.6.0",
+    "style-loader": "^0.12.0",
+    "url-loader": "^0.5.5",
+    "webpack": "^1.8.10",
+    "webpack-dev-server": "^1.8.2"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "node server.js"
+  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/freshdried/webpack-palette-react-hot-boilerplate"
+    "url": "https://github.com/freshdried/webpack-palette-react-hot\""
   },
   "keywords": [
     "webpack",
@@ -18,32 +41,13 @@
     "hmr",
     "boilerplate",
     "starter",
-    "template"
+    "template",
+    "seed"
   ],
   "author": "Sean Lee <freshdried@gmail.com> (http://sean.lee.mx/)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/freshdried/webpack-palette-react-hot/issues"
   },
-  "homepage": "https://github.com/freshdried/webpack-palette-react-hot",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "babel-core": "^4.7.8",
-    "babel-loader": "^4.1.0",
-    "css-loader": "^0.9.1",
-    "file-loader": "^0.8.1",
-    "html-loader": "^0.2.3",
-    "json-loader": "^0.5.1",
-    "markdown-loader": "^0.1.2",
-    "react-hot-loader": "^1.2.3",
-    "sass-loader": "^0.4.2",
-    "url-loader": "^0.5.5",
-    "webpack": "^1.7.3",
-    "webpack-dev-server": "^1.7.0",
-    "object-assign": "^2.0.0",
-    "react": "^0.13.0",
-    "style-loader": "^0.8.3"
-  }
+  "homepage": "https://github.com/freshdried/webpack-palette-react-hot"
 }
