--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "webpack-palette-react-hot",
-  "version": "1.0.2",
+  "name": "webpack-react-hot-seed",
+  "version": "1.0.3",
   "description": "A basic webpack template with react-hot loader",
   "main": "server.js",
   "dependencies": {
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/freshdried/webpack-palette-react-hot\""
+    "url": "https://github.com/freshdried/webpack-react-hot-seed"
   },
   "keywords": [
     "webpack",
@@ -47,7 +47,7 @@
   "author": "Sean Lee <freshdried@gmail.com> (http://sean.lee.mx/)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/freshdried/webpack-palette-react-hot/issues"
+    "url": "https://github.com/freshdried/webpack-react-hot-seed/issues"
   },
-  "homepage": "https://github.com/freshdried/webpack-palette-react-hot"
+  "homepage": "https://github.com/freshdried/webpack-react-hot-seed"
 }
