--- a/package.json
+++ b/package.json
@@ -4,25 +4,24 @@
   "description": "A basic webpack template with react-hot loader",
   "main": "server.js",
   "dependencies": {
-    "babel-core": "^5.1.13",
-    "babel-loader": "^5.0.0",
-    "css-loader": "^0.12.0",
-    "file-loader": "^0.8.1",
-    "html-loader": "^0.2.3",
-    "json-loader": "^0.5.1",
-    "markdown-loader": "^0.1.2",
-    "node-sass": "^2.1.1",
-    "object-assign": "^2.0.0",
-    "react": "^0.13.2",
-    "react-hot-loader": "^1.2.5",
-    "react-router": "^0.13.2",
-    "sass-loader": "^0.6.0",
-    "style-loader": "^0.12.0",
-    "url-loader": "^0.5.5",
-    "webpack": "^1.8.10",
-    "webpack-dev-server": "^1.8.2"
+    "babel-core": "*",
+    "babel-loader": "*",
+    "css-loader": "*",
+    "file-loader": "*",
+    "html-loader": "*",
+    "json-loader": "*",
+    "remarkable-loader": "*",
+    "node-sass": "*",
+    "object-assign": "*",
+    "react": "*",
+    "react-hot-loader": "*",
+    "react-router": "*",
+    "sass-loader": "*",
+    "style-loader": "*",
+    "url-loader": "*",
+    "webpack": "*",
+    "webpack-dev-server": "*"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "node server.js"
   },
