--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "react-hot-seed",
-  "version": "3.0.4",
+  "version": "4.0.0",
   "description": "webpack project seed with react-hot-loader",
   "main": "server.js",
   "dependencies": {
-    "babel-core": "^5.5.8",
-    "babel-loader": "^5.1.4",
+    "babel-core": "^5.8.22",
+    "babel-loader": "^5.3.2",
     "css-loader": "^0.14.5",
     "file-loader": "^0.8.4",
     "html-loader": "^0.3.0",
@@ -13,17 +13,18 @@
     "node-libs-browser": "^0.5.2",
     "node-sass": "^3.2.0",
     "react": "^0.13.3",
-    "react-hot-loader": "^1.2.7",
+    "react-hot-loader": "^1.2.8",
     "react-router": "^1.0.0-beta3",
     "remarkable-loader": "^0.1.0",
-    "sass-loader": "^1.0.2",
+    "sass-loader": "^1.0.4",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
-    "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0"
+    "webpack": "^1.11.0",
+    "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "NODE_ENV=production webpack"
   },
   "repository": {
     "type": "git",
