--- a/.eslintrc
+++ b/.eslintrc
@@ -9,9 +9,10 @@
     },
     "parser": "babel-eslint",
     "rules": {
-        "strict": [2, "never"],
+        "strict": 0,
         "react/jsx-uses-react": 2,
         "react/jsx-uses-vars": 2,
+        "react/prop-types": 2,
         "react/react-in-jsx-scope": 2
     },
     "plugins": [
