--- a/package.json
+++ b/package.json
@@ -5,26 +5,27 @@
   "description": "react project seed with live-reloading",
   "main": "server.js",
   "dependencies": {
+    "history": "^1.9.0",
+    "react": "^0.14.0-rc1",
+    "react-dom": "^0.14.0-rc1",
+    "react-router": "^1.0.0-beta4"
+  },
+  "devDependencies": {
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
     "css-loader": "^0.14.5",
     "file-loader": "^0.8.4",
     "html-loader": "^0.3.0",
-    "json-loader": "^0.5.2",
-    "node-libs-browser": "^0.5.2",
-    "node-sass": "^3.2.0",
-    "react": "^0.14.0-rc1",
-    "react-dom": "^0.14.0-rc1",
     "react-hot-loader": "^1.2.8",
-    "react-router": "^1.0.0-beta3",
     "remarkable-loader": "^0.1.0",
     "sass-loader": "^1.0.4",
+    "node-libs-browser": "^0.5.2",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
-    "webpack": "^1.11.0",
-    "webpack-dev-server": "^1.10.1"
-  },
-  "devDependencies": {
+    "webpack": "^1.12.1",
+    "webpack-dev-server": "^1.10.1",
+    "node-sass": "^3.2.0",
+    "json-loader": "^0.5.2",
     "babel-eslint": "^4.1.1",
     "babel-plugin-react-transform": "^1.0.3",
     "eslint": "^1.4.0",
@@ -33,7 +34,6 @@
     "react-transform-catch-errors": "^0.1.1",
     "react-transform-webpack-hmr": "^0.1.4",
     "redbox-react": "^1.0.3",
-    "webpack": "^1.12.1",
     "webpack-dev-middleware": "^1.2.0",
     "webpack-hot-middleware": "^2.0.0"
   },
