--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "history": "^1.9.0",
     "react": "^0.13.3",
-    "react-router": "^1.0.0-beta4"
+    "react-router": "^1.0.0-rc1"
   },
   "devDependencies": {
     "babel-core": "^5.8.22",
